Hasher Yefee first release 🚀🚀🚀

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
-<script src="hash.js"></script>
+<script src="./minified.js"></script>
 <script>
     console.log(unHash(hash('pleaseHashThis')));
 </script>
